# gnn_talk

./: Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
notebooks/: 00_first_example.ipynb  01_intro_pygc.ipynb  02_shallow_embeddings.ipynb  03_sageconv.ipynb
src/queries/: imdb.cypher
