[project]
name = "gnn-talk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.14"
dependencies = [
    "ipywidgets>=8.1.8",
    "lightning>=2.6.1",
    "matplotlib>=3.10.8",
    "numpy<2",
    "pyg_lib",
    "pyvis>=0.3.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "torch_cluster",
    "torch_geometric",
    "torch_scatter",
    "torch_sparse",
    "torch_spline_conv",
    "tqdm[notebook]>=4.67.3",
]

[tool.uv]
# Limitamos la resolución de dependencias solo a tu entorno de Mac Intel 
# para que no falle buscando wheels de Windows/Linux que no están en esa URL.
environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'"
]

find-links = [
    "https://data.pyg.org/whl/torch-2.4.0+cpu.html"
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "uv>=0.9.28",
]