[project]
name = "gnn-talk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.14"
dependencies = [
    "gensim>=4.4.0",
    "ipywidgets>=8.1.8",
    "lightning>=2.6.1",
    "matplotlib>=3.10.8",
    "numpy<2",
    "pandas>=3.0.3",
    "pyvis>=0.3.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "torch-sparse>=0.6.18",
    "torch_geometric",
    "tqdm[notebook]>=4.67.3",
]

[tool.uv]
environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'darwin' and platform_machine == 'x86_64'"
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
